# release-synchronizer

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/accounts/: admin.py  models.py  services.py  urls.py
apps/api/: permissions.py  serializers.py  urls.py  views.py
apps/approvals/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/audit/: admin.py  apps.py  context.py  middleware.py  models.py  services.py  urls.py  views.py
apps/common/: constants.py  permissions.py
apps/coordination/: apps.py  services.py  urls.py  views.py
apps/integrations/: admin.py  apps.py  models.py  services.py
apps/mappings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/mismatch/: admin.py  apps.py  forms.py  models.py  rules.py  services.py  urls.py  views.py
apps/releases/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/status_reports/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/vendor_queue/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  prod.py
docs/: architecture.md  mvp_tradeoffs.md
templates/: base.html
templates/accounts/: login.html
templates/approvals/: cost_approval_detail.html  cost_approval_queue.html
templates/audit/: audit_event_list.html
templates/coordination/: azure_mirror.html  diff_apply.html  manual_board.html
templates/mappings/: mapping_form.html  mapping_list.html
(+44 files in other folders)
